--- a/index.html
+++ b/index.html
@@ -41,5 +41,12 @@
     </div>
 
     <script type="module" src="./src/index.js"></script>
+    <script>
+      window.process = {
+        env: {
+          NODE_ENV: "development",
+        },
+      };
+    </script>
   </body>
 </html>
