added ADD_COMMENT action creator and updated reducer.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <!-- Pull dynamic content from the data.json file -->
 
-    <comments-section></comments-section>
+    <comments-page></comments-page>
 
     <div class="attribution">
       Challenge by
